[BUGFIX] Add missing cursor for collapse menu
Adds a pointer to the menu collapse property in
the menu component.

Reviewed-on: https://review.typo3.org/22095
Tested-by: Mattias Nilsson
Tested-by: Berit Hlubek
Tested-by: Sebastian Kurfuerst
Original-Commit-Hash: 7c586378b3f922d9199cf4e4d21687992687fc4f

--- a/TYPO3.Neos/Resources/Private/Styles/Menu/_MenuPanel.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Menu/_MenuPanel.scss
@@ -96,6 +96,7 @@ $menuIconWidth: 54px;
 			width: $unit;
 			height: $unit;
 			border-left: 1px solid $grayLight;
+			cursor: pointer;
 
 			&:hover {
 				background-color: $blue;
